refactor: minor code & logging improvements (#2761)
* refactor: minor code & logging improvements

* refactor: improve log statements